Fix table text alignment

--- a/_includes/css/sakura.scss
+++ b/_includes/css/sakura.scss
@@ -132,7 +132,7 @@ pre, code {
 // Tables
 //
 table {
-  text-align: justify;
+  text-align: left;
   width: 100%;
   border-collapse: collapse; }
 
